BUG-014 fixed description overflow on search and profile view

--- a/client/src/components/Profile/ViewProfile.css
+++ b/client/src/components/Profile/ViewProfile.css
@@ -100,3 +100,12 @@
     flex-direction: row;
     align-items: center;
 }
+
+.profile-post-card-body{
+    font-size: 20px;
+    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
